fix jumbotron invisible bug

--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,6 @@ nav {
 }
 
 .jumbotron {
-  background-color: var(--blue);
   width: 100%;
   height: 844px;
   overflow: none;
